--- a/index.html
+++ b/index.html
@@ -135,6 +135,23 @@ body::before {
     <span>Quiz</span>
     <div id="score-quiz" style="font-size:10px; color:#06b6d4; margin-top:4px;"></div>
   </div>
+  <div class="desktop">
+  <div class="icon" onclick="window.location='tebak-angka.html'">
+    <img src="https://img.icons8.com/ios-filled/100/ffffff/1-circle.png" alt="Tebak Angka">
+    <span>Tebak Angka</span>
+  </div>
+  <div class="icon" onclick="window.location='snake.html'">
+    <img src="https://img.icons8.com/ios-filled/100/ffffff/snake.png" alt="Snake">
+    <span>Snake</span>
+  </div>
+  <div class="icon" onclick="window.location='quiz.html'">
+    <img src="https://img.icons8.com/ios-filled/100/ffffff/quiz.png" alt="Quiz">
+    <span>Quiz</span>
+  </div>
+<div class="icon" onclick="window.location='game-rpg.html'">
+    <img src="https://img.icons8.com/ios-filled/100/ffffff/sword.png" alt="RPG Game">
+    <span>RPG Game</span>
+  </div>
 </div>
 
 <script>
